--- a/style.css
+++ b/style.css
@@ -67,11 +67,10 @@ img {
 
 .flex {
 	display: flex;
-	-webkit-gap: var(--gap, 1rem);
-	-moz-gap: var(--gap, 1rem);
-	-o-gap: var(--gap, 1rem);
-	-ms-gap: var(--gap, 1rem);
-	gap: var(--gap, 1rem);
+}
+
+.flex > * + * {
+	margin-left: var(--gap, 1rem);
 }
 
 .center {justify-content: center}
