--- a/style.css
+++ b/style.css
@@ -219,8 +219,8 @@ img {
 }
 
 @media screen and (min-width: 40em) {
-	.flex {
-		gap: var(--gap, 1.5rem);
+	.flex > * + * {
+		margin-left: var(--gap, 1.5em);
 	}
 	
 }
